# h3

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .tokeignore  404.html  AGENT.md  AVANTE.md  CNAME  LICENSE.md  README.md  asset-manifest.json  build_winsdk.sh  ccstuff.html  index.html  justfile  modpacks.json  print.html  renovate.json  searchindex.js  searchindex.json  simple-packwiz-wrapper.sh  xobusy.html
archives/DML/: config.toml.example  pyproject.toml
archives/DML/modules/: README.md
archives/MRBS/: README.md  code.txt  main.py  pyproject.toml
archives/bom/: README.md  pyproject.toml
archives/codedb/: main.py  pyproject.toml
archives/codedb/src/: core.py
archives/icantfindit/: .gitignore  main.py  pyproject.toml
archives/ise/: main.py  pyproject.toml
archives/pcwg/: README.md  pyproject.toml  workspace.josh
archives/sntapi/: cli.py  cliv2.py  pyproject.toml
archives/starlighter/: README.md  pyproject.toml
projects/AEBS/: README.md  main.py  pyproject.toml
projects/DML/: README.md  config.toml.example  main.py  pyproject.toml  start.sh
projects/DML/locales/: en.json  ko.json
projects/DML/modules/: README.md  bank.py  log.py  scpsl.py  snt.py
projects/alittleofmoney/: .gitignore  README.md  main.py  pyproject.toml  workspace.josh
projects/alu/: README.md  main.py  pyproject.toml
projects/bojs/: .gitignore  10480.py  1247.py  1284.py  1547.py  16727.py  1703.py  17356.py  17388.py  18398.py  18698.py  20215.py  20232.py  20976.py  21612.py  21638.py  24075.py  24079.py  24087.py  24183.py  24263.py  25191.py  25377.py  25628.py  25881.py  26209.py  26340.py  26350.py  26495.py  26500.py  26546.py  26566.py  26574.py  26575.py  26766.py  26767.py  26772.py  27110.py  27219.py  27262.py  (+13 more)
projects/bojs/bojforrust/: Cargo.toml
projects/bojs/bojforrust/src/: 9782.rs  a9782.rs  main.rs
projects/bojs/docs/: 16204.txt  17362.txt
projects/bojs/problems/: 1003.py  10101.py  10797.py  10808.py  10817.py  11365.py  11549.py  11720.py  11945.py  11948.py  13496.py  14038.py  14264.py  14470.py  14489.py  14623.py  15051.py  15059.py  15232.py  15372.py  15552.py  15610.py  15680.py  15726.py  15963.py  16017.py  16099.py  16204.py  1703.py  17903.py  18330.py  1837.py  18409.py  18698.py  21598.py  23235.py  23795.py  24072.py  2530.py  25600.py  (+32 more)
projects/bojs/problems/BronzeII/: 14623.py
projects/bojs/problems/BronzeIII/: 1267.py  5893.py
projects/bojs/problems/BronzeIV/: 10039.py  10156.py  10768.py  10797.py  11121.py  11720.py  11943.py  11948.py  13136.py  13496.py  13597.py  13866.py  13985.py  14038.py  (+61 more)
projects/butter/: .gitignore  .vsls.json  README.md  a.d2  flake.nix  main.py  pyproject.toml
projects/butter/modules/: config.py  llm.py  llm_function.py  memory.py
projects/butter/prompts/: middle_prompt  prompt  summarize_prompt
projects/chesscli/: .gitignore  main.py  pyproject.toml
projects/chessly/: README.md  lichessdev.py  main.py  pyproject.toml
projects/cof/: .cofignore  .gitignore  README.md  build.zig  build.zig.zon  main.py  pyproject.toml
projects/cof/src/: core.zig  main.zig  root.zig  test.zig
projects/esgithub/: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  shell.nix
projects/exsl/: Cargo.toml  README.md  SPEC.md
projects/exsl/.cargo/: config.toml
projects/exsl/src/: ast.rs  exsl.lalrpop  main.rs
projects/flux/: Cargo.toml  README.md  bench_final.txt  bench_output.txt
projects/flux/benches/: rust_impls.rs
projects/flux/examples/: actors.flux  async_tasks.flux  basic.flux  gpu_kernel.flux  parallel.flux
projects/flux/src/: actor.rs  ast.rs  codegen.rs  lib.rs  typecheck.rs  types.rs
projects/flux/tests/: integration_tests.rs
projects/grapher/: README.md  SCHEMA.md  code_parser.py  graph_builder.py  main.py  main_pipeline.py  mcp_server_fastmcp.py  pyproject.toml  query_translator.py  rust_parser.py  setup_cursor.py
projects/grapher/code_knowledge_graph/: FUTURE_WORK.md  MCP_README.md  README.md  graph_builder.py  main_pipeline.py  mcp_config.json  mcp_server.py  pyproject.toml  setup_cursor.py
projects/grapher/demo/: auth.py  auth_rust.rs  demo.py  rust_demo.rs
projects/himari/: .gitignore  README.md  collector.py  evaluate.py  evaluator.py  gel.toml  main.py  pyproject.toml
projects/himari/dbschema/: default.gel  scoping.gel
projects/himari/queries/: insert.edgeql  insert_async_edgeql.py
projects/icantfindit/: .gitignore  README.md  main.py  pyproject.toml  validating.py
projects/lock/: pyproject.toml
projects/makeabug/: LICENSE  README.md  main.py  pyproject.toml  workspace.josh
projects/nextpred/: README.md  docker-compose.yml  flake.nix  main.py  pyproject.toml
projects/nextpred/extension/: background.js  content.js  manifest.json
projects/nextpred/server/: main.py  requirements.txt
projects/nextpred/src/: __init__.py  config.py  database.py  main.py  monitor.py  notifier.py  pattern_engine.py  tray_app.py  typedefs.py  windows_api.py
projects/nextpred/tests/: __init__.py  test_database.py  test_pattern_engine.py
projects/pIng/: LICENSE.md  README.md  install.sh  pyproject.toml
projects/quantumdb/: .gitignore  Cargo.toml  DATASET_README.md  Dockerfile  QUICKSTART.md  README.md  check_dataset.py  compare_embeddings.py  debug_import.py  docker-compose.yml  download_dataset.py  example_usage.py  flake.nix  pyproject.toml  run_tests.py  run_tests_env.sh  rust-toolchain.toml  simple_download.py
projects/quantumdb/benches/: search.rs
projects/quantumdb/benchmark_results/: benchmark_report_1759673023.txt  benchmark_results_1759673023.json
projects/quantumdb/examples/: 01_train_model.py  02_build_index.py  03_search.py  search.rs  serve.rs  train.rs
projects/quantumdb/models/: learnablepq_final_metadata.json  learnablepq_synthetic_best_metadata.json
projects/quantumdb/quantumdb/: __init__.py  api.py
projects/quantumdb/quantumdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/quantumdb/tests/: conftest.py  integration_tests.rs  test_api.py  test_training.py
(+4005 files in other folders)
