[tool.poetry]
name = "MBBS"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
misilelibpy = {path = "libs/misilelib/misilelib-python"}
simple-websocket-server = "0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
