[tool.poetry]
name = "bom"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = {extras = ["standard"], version = "0.104.0"}
websockets = "11.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
