[tool.poetry]
name = "bom"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = {extras = ["standard"], version = "0.104.1"}
websockets = "12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
