[project]
name = "codedb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "chromadb>=1.0.17",
    "click>=8.2.1",
    "langchain>=0.3.27",
    "numpy>=2.3.2",
    "sentence-transformers>=5.1.0",
    "typer>=0.16.0",
]
