[tool.poetry]
name = "icantfindit"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
numpy = "1.24.3"
prompt-toolkit = "3.0.37"
tabulate = "0.9.0"
simple-term-menu = "1.6.1"
misilelibpy = { path = "libs/misilelib/misilelib-python" }
requests = "2.29.0"
inquirer = "3.1.3"
pyfiglet = "0.8.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
