[tool.poetry]
name = "ise"
version = "0.1.0"
description = "Symbolic Equation Solver"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
sympy = "1.11.1"
sympy-addons = "0.0.5"
numpy = "1.24.3"
click = "8.1.3"
typer = {extras = ["all"], version = "0.7.0"}
matplotlib = "3.7.1"
ipython = "8.12.0"
latex2sympy2 = "1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
