[tool.poetry]
name = "pcwg"
version = "0.1.0"
description = "Percentage Calculator With Game"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
misilelibpy = { path = "libs/misilelib/misilelib-python" }
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
