[tool.poetry]
name = "sntapi"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "0.109.2"
uvicorn = "0.27.1"
pymongo = "4.6.1"
python-dotenv = "1.0.1"
selenium = "4.18.1"
pydantic = "2.6.1"
pypdf = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
