[tool.poetry]
name = "sntapi"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.110.1"
uvicorn = "0.29.0"
pymongo = "4.6.3"
python-dotenv = "1.0.1"
selenium = "4.19.0"
pydantic = "2.7.0"
pypdf = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
