[tool.poetry]
name = "starlighter"
version = "0.1.0"
description = "The AI app about light pollution"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
keras = "2.14.0"
scipy = "1.11.2"
Pillow = "10.0.1"

[tool.poetry.group.scraping.dependencies]
requests = "2.31.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
