[tool.poetry]
name = "starlighter"
version = "0.1.0"
description = "The AI app about light pollution"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
keras = "2.15.0"
scipy = "1.11.3"
Pillow = "10.1.0"

[tool.poetry.group.scraping.dependencies]
requests = "2.31.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
