[tool.poetry]
name = "sunrintbot"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
disnake = "2.8.1"
tomli = "2.0.1"

[tool.poetry.group.snt.dependencies]
requests = "2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
