[tool.poetry]
name = "alm"
version = "0.1.0"
description = "A Little of Money"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
requests = "2.28.2"
misilelibpy = { path = "libs/misilelib/misilelib-python" }
tabulate = {extras = ["widechars"], version = "0.9.0"}
typer = {extras = ["all"], version = "0.7.0"}
simple-term-menu = "1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
