[tool.poetry]
name = "alu"
version = "0.1.0"
description = "Server for my custom programs"
authors = ["Misile"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = "0.92.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
