[tool.poetry]
name = "baektest"
version = "0.1.0"
description = "baekjoon test"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
tomli = "2.0.1"
requests = "2.28.1"
baekjoonapi = {git = "https://github.com/MisileLab/baekjoonapi.git"}
numpy = "1.24.1"
misilelibpy = {path = "libs/misilelib/misilelib-python"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
