[tool.poetry]
name = "chessly"
version = "0.1.0"
description = "Chess but some lichess"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
python-chess = "1.999"
lichess-python = "0.4.2"

[tool.poetry.group.dylan.dependencies]
disnake = "2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
