[tool.poetry]
name = "chessly"
version = "0.1.0"
description = "Chess but some lichess"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
python-chess = "1.999"
misilelibpy = { path = "libs/misilelib/misilelib-python" }

[tool.poetry.group.lichess.dependencies]
berserk = "0.10.0"
python-dotenv = "0.21.1"

[tool.poetry.group.dylan.dependencies]
disnake = "2.8.0"

[tool.poetry.group.lichess-pangyong.dependencies]
simple-term-menu = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
