[project]
name = "cof"
version = "0.1.0"
description = "A version control system optimized for binary files."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "blake3",
    "zstandard",
    "toml",
    "aiofiles",
    "asyncio-mqtt",
    "cryptography",
]

[tool.uv]
package = true

[project.scripts]
cof = "cof.main:cli"
