[package]
name = "flux_lang"
version = "0.1.0"
edition = "2021"
authors = ["Flux Language Team"]
description = "Flux functional programming language compiler with effect system"

[[bin]]
name = "fluxc"
path = "src/main.rs"

[lib]
name = "flux_lang"
path = "src/lib.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parallel runtime
rayon = "1.10"
crossbeam = "0.8"
tokio = { version = "1.39", features = ["full"] }

# Code generation - WebAssembly
wasm-encoder = "0.242"

# Code generation - x86-64 (Simple interpreter fallback)
# Note: Full native compilation would require LLVM or Cranelift

# Utilities
once_cell = "1.19"
inkwell = { version = "0.7.1", default-features = false, features = ["llvm21-1", "target-x86"] }

[dev-dependencies]
tempfile = "3.12"
criterion = "0.7"

[[bench]]
name = "compiler_bench"
harness = false
