[project]
name = "himari"
version = "0.1.0"
description = "backend of noMoreSpam"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
  "argon2-cffi==25.1.0",
  "fastapi[standard]==0.116.1",
  "modal==1.1.0",
  # https://modallabscommunity.slack.com/archives/C069RAH7X4M/p1741644232430889
  "protobuf<5.0.0",
  "safetensors==0.5.3",
  "torch==2.7.1",
  "transformers==4.54.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.7.1+cpu",
]
rocm = [
  "torch==2.7.1+rocm6.3",
  "pytorch-triton-rocm==3.3.1"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "rocm" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

