[project]
name = "next-action-predictor"
version = "0.1.0"
description = "Cross-platform OS-level action pattern learning and suggestion system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbus-python>=1.4.0",
    "pillow>=11.3.0",
    "plyer>=2.1.0",
    "psutil>=7.1.0",
    "pystray>=0.19.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
